# qlua-root-repo

./: .gitignore  .gitmodules  README.md
LUA/: README.txt
LUA/lua-5.3.5/: ==dumpbin==.bat  CMakeLists.txt  README.txt  config-5.3-old.lua  config-5.3.lua  luarocks-installer-info.txt  make.bat  make.output.txt
LUA/lua-5.3.5/luarocks/: luarocks-admin.bat  luarocks.bat
LUA/lua-5.3.5/luarocks/lua/luarocks/cmd/: init.lua
LUA/lua-5.3.5/luarocks/lua/luarocks/core/: hardcoded.lua
LUA/lua-5.4.1/: CMakeLists.txt  CMakeLists.txt.1  CMakeLists.txt.2  cmake-build-sysinfo.txt  cmake-dump-variables.txt  config-5.4-old.lua  dumpbin.bat  dumpbin64.bat  make.bat  make64.bat
LUA/lua-5.4.1/cmake-dump-release-x64/: lua.exe.dependents.txt  lua.exe.exports.txt  lua.exe.headers.txt  lua.exe.imports.txt  lua54.dll.dependents.txt  lua54.dll.exports.txt  lua54.dll.headers.txt  lua54.dll.imports.txt  luac.exe.dependents.txt  luac.exe.exports.txt  luac.exe.headers.txt  luac.exe.imports.txt
LUA/lua-5.4.1/src.luac/: README.txt
LUA/lua-5.4.1/test/: test.luac
SRC.luarocks/cjson/: ==dumpbin==.bat  CMakeLists.txt  make64.bat
SRC.luarocks/cjson/cmake-dump-release-x64/: cjson.dll.dependents.txt  cjson.dll.exports.txt  cjson.dll.headers.txt  cjson.dll.imports.txt
SRC.luarocks/kepler_luafs/: CMakeLists.txt
SRC.luarocks/kepler_luasql/: !!CMAKE_CMDS!!.txt  !!CMAKE_CONSTS_x64!!.txt  !!CMAKE_CONSTS_x86!!.txt  !!VS_BUILDTOOLS_ENV!!.txt  --CMakeCache--.txt  --cmake_install--.txt  ==dumpbin==.bat  CMakeLists.txt  luasql.sqlite3.dll.headers.txt  sqlite3.dll.dependents.txt  sqlite3.dll.exports.txt  sqlite3.dll.headers.txt  sqlite3.dll.imports.txt
SRC.luarocks/lpeg/: ==dumpbin==.bat  CMakeLists.txt
SRC.luarocks/luasec/: ==dumpbin==.bat  CMakeLists.txt  luarocks_install.bat  luarocks_pack.bat  make.bat
SRC.luarocks/luasocket/: ==dumpbin==.bat  CMakeLists.txt
SRC.luarocks/luautf8/: ==dumpbin==.bat  CMakeLists.txt
SRC.native/openssl/: shell.bat  shell.output.txt
